fixing nav on mobile

--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -4,7 +4,7 @@
     top: 0;
     bottom: 0;
     left: -100%;
-    right: 0;
+    /* right: 0%; */
     background-color: black;
     display: flex;
 }
@@ -15,18 +15,22 @@
 
 .nav-open{
     left: 0;
+    width: 80%;
+    background: white;
+    opacity: 0.9;
+    color: black;
 }
 
 .close-nav-btn{
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 0;
+    right: -25%;
     color: #fff;
     background-color: black;
     border: 0;
     font-size: 2rem;
     font-weight: 700;
-    padding: 0;
+    padding: 7% 7.5%;
     cursor: pointer;
 }
 
@@ -40,15 +44,18 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: start;
+    padding: 1em 1.75em;
+    justify-content: start;
     gap: 3rem;
     flex-basis: 100%;
+    margin-top: 0;
 }
 
 .nav-link{
     text-decoration: none;
-    color: white;
+    color: black;
+    
     font-size: 2rem;
     text-transform: uppercase;
     letter-spacing: 2px;
