--- a/src/components/news-letter-popup/NewsLetterPopup.css
+++ b/src/components/news-letter-popup/NewsLetterPopup.css
@@ -43,13 +43,13 @@
 .popup-form{
     display: flex;
     flex-direction: column;
-    gap: .5em;
+    gap: .75em;
     width: 100%;
     max-width: 90%;
 }
 
 .popup-form-btn{
-    padding: .75em 1em;
+    padding: 1em 1.5em;
     background-color: #666;
     border: 0;
     text-transform: uppercase;
@@ -61,9 +61,9 @@
 }
 
 .popup-form-input{
-    padding: .75em 1em;
+    padding: 1em 1.5em;
     border: 0;
-    text-transform: uppercase;
+    text-transform: capitalize;
     color: #666;
     border-radius: 8px;
     /* background-color: #C5C3C3; */
