--- a/src/pages/about-page/About.css
+++ b/src/pages/about-page/About.css
@@ -2,10 +2,7 @@
     height: 100%;
 }
 
-.main-content{
-    height: 100%;
-    max-height: 1450px;
-}
+
 
 .about-image{
     position: relative;
@@ -58,6 +55,7 @@
     max-width: 80%;
     margin: 0 auto;
     margin-top: 20px;
+
 }
 
 .about-body:first-of-type{
@@ -83,7 +81,8 @@
     font-family: 'Rouge Script', cursive;
     font-size: 2rem;
     margin-top: 20px;
-    margin-bottom: 0;
+    margin-bottom: 7em;
     padding-left: 10%;
     line-height: 1;
+
 }
