--- a/src/pages/contact-page/Contact.css
+++ b/src/pages/contact-page/Contact.css
@@ -2,7 +2,9 @@
     height: 100%;
 }
 
-.main-content{
+
+
+.contact-bg{
     position: relative;
     height: 100%;
     max-height: 750px;
@@ -11,16 +13,7 @@
     background-position: bottom; 
     display: flex;
     flex-direction: column;
-}
-
-.contact-bg{
-    position: relative;
-    height: 100%;
-    background-image: url(../../images/paper-fiber.png);
-     background-size: cover;
-    background-position: bottom; 
-    display: flex;
-    flex-direction: column;
+    padding-bottom: 100px;
 }
 
 .contact-form{
@@ -87,7 +80,7 @@ textarea{
     /* margin-right: 15%;
     margin-left: auto; */
     margin-bottom: 2em;
-    /* text-transform: uppercase; */
+    text-transform: uppercase;
     font-weight: 700;
 }
 
